bitfield/tests/09-variant-out-of-range2.stderr
error: any use of this value will cause an error
  --> tests/09-variant-out-of-range2.rs:18:5
   |
18 |     External,
   |     ^^^^^^^^ attempt to compute `0_u8 - 1_u8`, which would overflow
   |
   = note: `#[deny(const_err)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
